objects/DidUEnjoy_Post_Contact_Email__mdt.object
<CustomObject>
    <label>DidUEnjoy - Post Contact Email</label>
    <pluralLabel>DidUEnjoy - Post Contact Email</pluralLabel>
    <fields>
        <fullName>ID_Survey__c</fullName>
        <label>ID Survey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMPLATE_ID_JP__c</fullName>
        <label>TEMPLATE ID JP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID_US__c</fullName>
        <label>Template ID US</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_ID_except_US__c</fullName>
        <label>Template ID except US</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>